[gd_scene load_steps=7 format=3 uid="uid://bvd76e6u4y8jo"]

[ext_resource type="Texture2D" uid="uid://ed5lg8crqlew" path="res://assets/coin_gold.png" id="1_4ual3"]
[ext_resource type="Script" path="res://components/coin/coin.gd" id="1_dlbmr"]
[ext_resource type="AudioStream" uid="uid://gy7taffuq6xh" path="res://assets/sounds/coin_collect.mp3" id="3_6vkjg"]
[ext_resource type="AudioStream" uid="uid://bu03rpmys0n4b" path="res://assets/sounds/coin_clash.mp3" id="4_qbjdh"]
[ext_resource type="AudioStream" uid="uid://titrfyqa08il" path="res://assets/sounds/coin_arrow.mp3" id="5_cpoij"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nnu0v"]
radius = 17.72

[node name="Coin" type="Area2D"]
script = ExtResource("1_dlbmr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_4ual3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nnu0v")

[node name="CoinCollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6vkjg")

[node name="CoinClashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qbjdh")

[node name="CoinArrowSpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cpoij")
